--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-addons-pure-render-mixin": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "react-popup": "^0.8.0",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
     "simpl-schema": "^0.3.0"
